examples/invalid/undefined_variable_reference_in_request.reqlang
#!/usr/bin/env reqlang
---
GET http://example.com HTTP/1.1
host: {{:base_url}}
---
